--- a/checkbox.html
+++ b/checkbox.html
@@ -13,7 +13,7 @@
 <body>
   <nav>
     <a href="index.html">Home</a>
-    <a href="checkbox.html">Checkboxes</a>
+    <a href="radio.html">Radio</a>
   </nav>
 
   <div class="content-wrap">
