Task: clear fields Changes: reset button functional

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         <div class="button-container">
           <input class="btn" type="submit" name="submitButton" onsubmit="validate()" value="Submit">
-          <button class="btn" type="button" name="resetButton">Reset</button>
+          <button class="btn" type="button" name="resetButton" onclick="clearForm()">Reset</button>
         </div>
       </form>
     </div>
