--- a/directory.html
+++ b/directory.html
@@ -42,10 +42,10 @@
 
 <body style="background-image: url('https://images.unsplash.com/photo-1627793741864-1a9ec3ef2ba0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1429&q=80'); background-repeat: no-repeat; background-size: cover;">
     <div class="directory-container">
-        <button><a href="https://web.njit.edu/~jad229/IT202/Assignment3/BooksellerDB.php">Bookseller DB</a></button>
-        <button><a href="https://web.njit.edu/~jad229/IT202/Assignment3/CustomerDB.php">Customer DB</a></button>
-        <button><a href="https://web.njit.edu/~jad229/IT202/Assignment3/CustomerOrderInfoDB.php">Customer Order Info DB</a></button>
-        <button><a href="https://web.njit.edu/~jad229/IT202/Assignment3/CustomerPurchaseInfoDB.php">Customer Purchase Info DB</a></button>
+        <button><a href="BooksellerDB.php">Bookseller DB</a></button>
+        <button><a href="CustomerDB.php">Customer DB</a></button>
+        <button><a href="CustomerOrderInfoDB.php">Customer Order Info DB</a></button>
+        <button><a href="CustomerPurchaseInfoDB.php">Customer Purchase Info DB</a></button>
     </div>
 </body>
 
