--- a/cancel.html
+++ b/cancel.html
@@ -15,7 +15,14 @@
 
 <div class="content-wrap">
 
-  <img id="collage-bg" src="images/book-collage.jpg" alt="collage of books">
+  <nav>
+    <a href="login.html"><button>Search Bookseller Records</button></a>
+    <a href="purchase.html"><button>Customer Purchase/Order</button></a>
+    <a href="return.html"><button>Customer Returns</button></a>
+    <a href="update.html"><button>Update Customer Order</button></a>
+    <a href="cancel.html"><button>Cancel Customer Order</button></a>
+    <a href="create.html"><button>Create Customer Account</button></a>
+  </nav>
 
   <div class="form-container">
     <form id="user-form" action="cancel.php" onsubmit="return ValidateReturnForm()" method="post">
